// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[` 1`] = `
<ul
  className="List__ListWrapper-sc-43f2zq-1 dtSHCa"
  id="Standard"
>
  <li
    className="List__ListTitleWrapper-sc-43f2zq-2 cQSXCy"
  >
    <h6
      className="Typography__TitleText-sc-19auepv-2 cLteVL List__ListTitle-sc-43f2zq-3 bbfEBL"
      fontSize="1em"
      fontWeight={600}
      letterSpacing="0px"
    >
      List Title
    </h6>
  </li>
  <li
    className="List__SectionWrapper-sc-43f2zq-4 evEBZy"
  >
    <p
      className="Typography__Paragraph-sc-19auepv-3 dIbntl List__Section-sc-43f2zq-5 eiGycN"
      fontSize="0.876em"
      fontWeight={400}
      id={null}
      letterSpacing="0px"
    >
      Section Name
    </p>
  </li>
  <li
    className="List__ListItemWrapper-sc-43f2zq-0 ktfOaA"
    disabled={false}
    href={null}
    id={null}
    onClick={null}
    tabIndex="0"
  >
    <div
      className="Bar__BarLayout-icfo76-2 eUVQsH"
      id={null}
      onClick={null}
    >
      <div
        className="Bar__Slot-icfo76-1 RjiBe"
      >
        <p
          className="Typography__Paragraph-sc-19auepv-3 bGQNqt"
          fontSize="1em"
          fontWeight={600}
          id={null}
          letterSpacing="0px"
        >
          List Item
        </p>
      </div>
    </div>
  </li>
  <li
    className="List__ListItemWrapper-sc-43f2zq-0 ktfOaA"
    disabled={true}
    href={null}
    id={null}
    onClick={null}
    tabIndex="-1"
  >
    <div
      className="Bar__BarLayout-icfo76-2 eUVQsH"
      id={null}
      onClick={null}
    >
      <div
        className="Bar__Slot-icfo76-1 RjiBe"
      >
        <p
          className="Typography__Paragraph-sc-19auepv-3 bGQNqt"
          fontSize="1em"
          fontWeight={600}
          id={null}
          letterSpacing="0px"
        >
          Disabled Item
        </p>
      </div>
    </div>
  </li>
  <li
    className="List__ListItemWrapper-sc-43f2zq-0 ktfOaA"
    disabled={false}
    href={null}
    id={null}
    onClick={null}
    tabIndex="0"
  >
    <div
      className="Bar__BarLayout-icfo76-2 eUVQsH"
      id={null}
      onClick={null}
    >
      <div
        className="Bar__Slot-icfo76-1 RjiBe"
      >
        <p
          className="Typography__Paragraph-sc-19auepv-3 bGQNqt"
          fontSize="1em"
          fontWeight={600}
          id={null}
          letterSpacing="0px"
        >
          List Item
        </p>
      </div>
    </div>
  </li>
  <li
    className="List__SectionWrapper-sc-43f2zq-4 evEBZy"
  >
    <p
      className="Typography__Paragraph-sc-19auepv-3 dIbntl List__Section-sc-43f2zq-5 eiGycN"
      fontSize="0.876em"
      fontWeight={400}
      id={null}
      letterSpacing="0px"
    >
      Section Name
    </p>
  </li>
  <li
    className="List__ListItemWrapper-sc-43f2zq-0 fdAPQl"
    disabled={false}
    href={null}
    id={null}
    onClick={null}
    tabIndex="0"
  >
    <div
      className="Bar__BarLayout-icfo76-2 eUVQsH"
      id={null}
      onClick={null}
    >
      <div
        className="Bar__Slot-icfo76-1 RjiBe"
      >
        <p
          className="Typography__Paragraph-sc-19auepv-3 bGQNqt"
          fontSize="1em"
          fontWeight={600}
          id={null}
          letterSpacing="0px"
        >
          Selected Item
        </p>
      </div>
    </div>
  </li>
  <li
    className="List__ListItemWrapper-sc-43f2zq-0 ktfOaA"
    disabled={false}
    href={null}
    id={null}
    onClick={null}
    tabIndex="0"
  >
    <div
      className="Bar__BarLayout-icfo76-2 eUVQsH"
      id={null}
      onClick={null}
    >
      <div
        className="Bar__Slot-icfo76-1 RjiBe"
      >
        <p
          className="Typography__Paragraph-sc-19auepv-3 bGQNqt"
          fontSize="1em"
          fontWeight={600}
          id={null}
          letterSpacing="0px"
        >
          List Item
        </p>
      </div>
    </div>
  </li>
  <li
    className="List__ListItemWrapper-sc-43f2zq-0 ktfOaA"
    disabled={false}
    href={null}
    id={null}
    onClick={null}
    tabIndex="0"
  >
    <div
      className="Bar__BarLayout-icfo76-2 eUVQsH"
      id={null}
      onClick={null}
    >
      <div
        className="Bar__Slot-icfo76-1 RjiBe"
      >
        <p
          className="Typography__Paragraph-sc-19auepv-3 bGQNqt"
          fontSize="1em"
          fontWeight={600}
          id={null}
          letterSpacing="0px"
        >
          List Item
        </p>
      </div>
    </div>
  </li>
</ul>
`;

exports[` 2`] = `
<ul
  className="List__ListWrapper-sc-43f2zq-1 dZwfPB"
  id="Inverse"
>
  <li
    className="List__ListTitleWrapper-sc-43f2zq-2 cQSXCy"
  >
    <h6
      className="Typography__TitleText-sc-19auepv-2 cLteVL List__ListTitle-sc-43f2zq-3 bbfEBL"
      fontSize="1em"
      fontWeight={600}
      letterSpacing="0px"
    >
      List Title
    </h6>
  </li>
  <li
    className="List__SectionWrapper-sc-43f2zq-4 evEBZy"
  >
    <p
      className="Typography__Paragraph-sc-19auepv-3 dIbntl List__Section-sc-43f2zq-5 eiGycN"
      fontSize="0.876em"
      fontWeight={400}
      id={null}
      letterSpacing="0px"
    >
      Section Name
    </p>
  </li>
  <li
    className="List__ListItemWrapper-sc-43f2zq-0 ktfOaA"
    disabled={false}
    href={null}
    id={null}
    onClick={null}
    tabIndex="0"
  >
    <div
      className="Bar__BarLayout-icfo76-2 eUVQsH"
      id={null}
      onClick={null}
    >
      <div
        className="Bar__Slot-icfo76-1 RjiBe"
      >
        <p
          className="Typography__Paragraph-sc-19auepv-3 bGQNqt"
          fontSize="1em"
          fontWeight={600}
          id={null}
          letterSpacing="0px"
        >
          List Item
        </p>
      </div>
    </div>
  </li>
  <li
    className="List__ListItemWrapper-sc-43f2zq-0 ktfOaA"
    disabled={true}
    href={null}
    id={null}
    onClick={null}
    tabIndex="-1"
  >
    <div
      className="Bar__BarLayout-icfo76-2 eUVQsH"
      id={null}
      onClick={null}
    >
      <div
        className="Bar__Slot-icfo76-1 RjiBe"
      >
        <p
          className="Typography__Paragraph-sc-19auepv-3 bGQNqt"
          fontSize="1em"
          fontWeight={600}
          id={null}
          letterSpacing="0px"
        >
          Disabled Item
        </p>
      </div>
    </div>
  </li>
  <li
    className="List__ListItemWrapper-sc-43f2zq-0 ktfOaA"
    disabled={false}
    href={null}
    id={null}
    onClick={null}
    tabIndex="0"
  >
    <div
      className="Bar__BarLayout-icfo76-2 eUVQsH"
      id={null}
      onClick={null}
    >
      <div
        className="Bar__Slot-icfo76-1 RjiBe"
      >
        <p
          className="Typography__Paragraph-sc-19auepv-3 bGQNqt"
          fontSize="1em"
          fontWeight={600}
          id={null}
          letterSpacing="0px"
        >
          List Item
        </p>
      </div>
    </div>
  </li>
  <li
    className="List__SectionWrapper-sc-43f2zq-4 evEBZy"
  >
    <p
      className="Typography__Paragraph-sc-19auepv-3 dIbntl List__Section-sc-43f2zq-5 eiGycN"
      fontSize="0.876em"
      fontWeight={400}
      id={null}
      letterSpacing="0px"
    >
      Section Name
    </p>
  </li>
  <li
    className="List__ListItemWrapper-sc-43f2zq-0 fdAPQl"
    disabled={false}
    href={null}
    id={null}
    onClick={null}
    tabIndex="0"
  >
    <div
      className="Bar__BarLayout-icfo76-2 eUVQsH"
      id={null}
      onClick={null}
    >
      <div
        className="Bar__Slot-icfo76-1 RjiBe"
      >
        <p
          className="Typography__Paragraph-sc-19auepv-3 bGQNqt"
          fontSize="1em"
          fontWeight={600}
          id={null}
          letterSpacing="0px"
        >
          Selected Item
        </p>
      </div>
    </div>
  </li>
  <li
    className="List__ListItemWrapper-sc-43f2zq-0 ktfOaA"
    disabled={false}
    href={null}
    id={null}
    onClick={null}
    tabIndex="0"
  >
    <div
      className="Bar__BarLayout-icfo76-2 eUVQsH"
      id={null}
      onClick={null}
    >
      <div
        className="Bar__Slot-icfo76-1 RjiBe"
      >
        <p
          className="Typography__Paragraph-sc-19auepv-3 bGQNqt"
          fontSize="1em"
          fontWeight={600}
          id={null}
          letterSpacing="0px"
        >
          List Item
        </p>
      </div>
    </div>
  </li>
  <li
    className="List__ListItemWrapper-sc-43f2zq-0 ktfOaA"
    disabled={false}
    href={null}
    id={null}
    onClick={null}
    tabIndex="0"
  >
    <div
      className="Bar__BarLayout-icfo76-2 eUVQsH"
      id={null}
      onClick={null}
    >
      <div
        className="Bar__Slot-icfo76-1 RjiBe"
      >
        <p
          className="Typography__Paragraph-sc-19auepv-3 bGQNqt"
          fontSize="1em"
          fontWeight={600}
          id={null}
          letterSpacing="0px"
        >
          List Item
        </p>
      </div>
    </div>
  </li>
</ul>
`;

exports[` 3`] = `
<ul
  className="List__ListWrapper-sc-43f2zq-1 dtSHCa"
  id="Knobs"
>
  <li
    className="List__ListItemWrapper-sc-43f2zq-0 mNeEz"
    disabled={false}
    href={null}
    id={null}
    onClick={null}
    tabIndex="0"
  >
    <div
      className="Bar__BarLayout-icfo76-2 eUVQsH"
      id={null}
      onClick={null}
    >
      <div
        className="Bar__Slot-icfo76-1 RjiBe"
      >
        <p
          className="Typography__Paragraph-sc-19auepv-3 bGQNqt"
          fontSize="1em"
          fontWeight={600}
          id={null}
          letterSpacing="0px"
        >
          Item 1
        </p>
      </div>
    </div>
  </li>
  <li
    className="List__ListItemWrapper-sc-43f2zq-0 mNeEz"
    disabled={false}
    href={null}
    id={null}
    onClick={null}
    tabIndex="0"
  >
    <div
      className="Bar__BarLayout-icfo76-2 eUVQsH"
      id={null}
      onClick={null}
    >
      <div
        className="Bar__Slot-icfo76-1 RjiBe"
      >
        <p
          className="Typography__Paragraph-sc-19auepv-3 bGQNqt"
          fontSize="1em"
          fontWeight={600}
          id={null}
          letterSpacing="0px"
        >
          Item 2
        </p>
      </div>
    </div>
  </li>
  <li
    className="List__ListItemWrapper-sc-43f2zq-0 mNeEz"
    disabled={false}
    href={null}
    id={null}
    onClick={null}
    tabIndex="0"
  >
    <div
      className="Bar__BarLayout-icfo76-2 eUVQsH"
      id={null}
      onClick={null}
    >
      <div
        className="Bar__Slot-icfo76-1 RjiBe"
      >
        <p
          className="Typography__Paragraph-sc-19auepv-3 bGQNqt"
          fontSize="1em"
          fontWeight={600}
          id={null}
          letterSpacing="0px"
        >
          Item 3
        </p>
      </div>
    </div>
  </li>
</ul>
`;

exports[` 4`] = `
<ul
  className="List__ListWrapper-sc-43f2zq-1 dtSHCa"
  id="States"
>
  <li
    className="List__ListItemWrapper-sc-43f2zq-0 mNeEz"
    disabled={false}
    href={null}
    id={null}
    onClick={null}
    tabIndex="0"
  >
    <div
      className="Bar__BarLayout-icfo76-2 eUVQsH"
      id={null}
      onClick={null}
    >
      <div
        className="Bar__Slot-icfo76-1 RjiBe"
      >
        <p
          className="Typography__Paragraph-sc-19auepv-3 bGQNqt"
          fontSize="1em"
          fontWeight={600}
          id={null}
          letterSpacing="0px"
        >
          List Item (standard)
        </p>
        <p
          className="Typography__Paragraph-sc-19auepv-3 CcLky"
          fontSize="0.75em"
          fontWeight={400}
          id={null}
          letterSpacing="0.2px"
        >
          This is the description
        </p>
      </div>
    </div>
  </li>
  <li
    className="List__ListItemWrapper-sc-43f2zq-0 fdAPQl"
    disabled={false}
    href={null}
    id={null}
    onClick={null}
    tabIndex="0"
  >
    <div
      className="Bar__BarLayout-icfo76-2 eUVQsH"
      id={null}
      onClick={null}
    >
      <div
        className="Bar__Slot-icfo76-1 RjiBe"
      >
        <p
          className="Typography__Paragraph-sc-19auepv-3 bGQNqt"
          fontSize="1em"
          fontWeight={600}
          id={null}
          letterSpacing="0px"
        >
          List Item (selected)
        </p>
        <p
          className="Typography__Paragraph-sc-19auepv-3 CcLky"
          fontSize="0.75em"
          fontWeight={400}
          id={null}
          letterSpacing="0.2px"
        >
          This is the description
        </p>
      </div>
    </div>
  </li>
  <li
    className="List__ListItemWrapper-sc-43f2zq-0 mNeEz"
    disabled={true}
    href={null}
    id={null}
    onClick={null}
    tabIndex="-1"
  >
    <div
      className="Bar__BarLayout-icfo76-2 eUVQsH"
      id={null}
      onClick={null}
    >
      <div
        className="Bar__Slot-icfo76-1 RjiBe"
      >
        <p
          className="Typography__Paragraph-sc-19auepv-3 bGQNqt"
          fontSize="1em"
          fontWeight={600}
          id={null}
          letterSpacing="0px"
        >
          List Item (disabled)
        </p>
        <p
          className="Typography__Paragraph-sc-19auepv-3 CcLky"
          fontSize="0.75em"
          fontWeight={400}
          id={null}
          letterSpacing="0.2px"
        >
          This is the description
        </p>
      </div>
    </div>
  </li>
</ul>
`;

exports[` 5`] = `
<ul
  className="List__ListWrapper-sc-43f2zq-1 dtSHCa"
  id="Interactive"
>
  <li
    className="List__ListItemWrapper-sc-43f2zq-0 ktfOaA"
    disabled={false}
    href={null}
    id={null}
    onClick={null}
    tabIndex="0"
  >
    <div
      className="Bar__BarLayout-icfo76-2 eUVQsH"
      id={null}
      onClick={null}
    >
      <div
        className="Bar__Slot-icfo76-1 RjiBe"
      >
        <p
          className="Typography__Paragraph-sc-19auepv-3 bGQNqt"
          fontSize="1em"
          fontWeight={600}
          id={null}
          letterSpacing="0px"
        >
          List Item
        </p>
        <p
          className="Typography__Paragraph-sc-19auepv-3 CcLky"
          fontSize="0.75em"
          fontWeight={400}
          id={null}
          letterSpacing="0.2px"
        >
          This is the description
        </p>
      </div>
    </div>
  </li>
  <li
    className="List__ListItemWrapper-sc-43f2zq-0 ktfOaA"
    disabled={false}
    href={null}
    id={null}
    onClick={null}
    tabIndex="0"
  >
    <div
      className="Bar__BarLayout-icfo76-2 eUVQsH"
      id={null}
      onClick={null}
    >
      <div
        className="Bar__Slot-icfo76-1 RjiBe"
      >
        <p
          className="Typography__Paragraph-sc-19auepv-3 bGQNqt"
          fontSize="1em"
          fontWeight={600}
          id={null}
          letterSpacing="0px"
        >
          List Item
        </p>
        <p
          className="Typography__Paragraph-sc-19auepv-3 CcLky"
          fontSize="0.75em"
          fontWeight={400}
          id={null}
          letterSpacing="0.2px"
        >
          This is the description
        </p>
      </div>
    </div>
  </li>
  <li
    className="List__ListItemWrapper-sc-43f2zq-0 ktfOaA"
    disabled={false}
    href={null}
    id={null}
    onClick={null}
    tabIndex="0"
  >
    <div
      className="Bar__BarLayout-icfo76-2 eUVQsH"
      id={null}
      onClick={null}
    >
      <div
        className="Bar__Slot-icfo76-1 RjiBe"
      >
        <p
          className="Typography__Paragraph-sc-19auepv-3 bGQNqt"
          fontSize="1em"
          fontWeight={600}
          id={null}
          letterSpacing="0px"
        >
          List Item
        </p>
        <p
          className="Typography__Paragraph-sc-19auepv-3 CcLky"
          fontSize="0.75em"
          fontWeight={400}
          id={null}
          letterSpacing="0.2px"
        >
          This is the description
        </p>
      </div>
    </div>
  </li>
  <li
    className="List__ListItemWrapper-sc-43f2zq-0 mNeEz"
    disabled={false}
    href={null}
    id={null}
    onClick={null}
    tabIndex="0"
  >
    <div
      className="Bar__BarLayout-icfo76-2 eUVQsH"
      id={null}
      onClick={null}
    >
      <div
        className="Bar__Slot-icfo76-1 RjiBe"
      >
        <p
          className="Typography__Paragraph-sc-19auepv-3 bGQNqt"
          fontSize="1em"
          fontWeight={600}
          id={null}
          letterSpacing="0px"
        >
          List Item (interaction disabled)
        </p>
        <p
          className="Typography__Paragraph-sc-19auepv-3 CcLky"
          fontSize="0.75em"
          fontWeight={400}
          id={null}
          letterSpacing="0.2px"
        >
          This is the description
        </p>
      </div>
    </div>
  </li>
  <li
    className="List__ListItemWrapper-sc-43f2zq-0 ktfOaA"
    disabled={false}
    href={null}
    id={null}
    onClick={null}
    tabIndex="0"
  >
    <div
      className="Bar__BarLayout-icfo76-2 eUVQsH"
      id={null}
      onClick={null}
    >
      <div
        className="Bar__Slot-icfo76-1 RjiBe"
      >
        <p
          className="Typography__Paragraph-sc-19auepv-3 bGQNqt"
          fontSize="1em"
          fontWeight={600}
          id={null}
          letterSpacing="0px"
        >
          List Item
        </p>
        <p
          className="Typography__Paragraph-sc-19auepv-3 CcLky"
          fontSize="0.75em"
          fontWeight={400}
          id={null}
          letterSpacing="0.2px"
        >
          This is the description
        </p>
      </div>
    </div>
  </li>
</ul>
`;

exports[` 6`] = `
<ul
  className="List__ListWrapper-sc-43f2zq-1 dtSHCa"
  id="Pre-Label"
>
  <li
    className="List__ListItemWrapper-sc-43f2zq-0 ktfOaA"
    disabled={false}
    href={null}
    id={null}
    onClick={null}
    tabIndex="0"
  >
    <div
      className="Bar__BarLayout-icfo76-2 eUVQsH"
      id={null}
      onClick={null}
    >
      <div
        className="Bar__Slot-icfo76-1 boCGaE"
      >
        <div
          className="Avatar__TagContainer-sc-1vuf9om-2 bIbEMn"
          id={null}
          onClick={null}
        >
          <h6
            className="Typography__TitleText-sc-19auepv-2 exoZGd Avatar__AvatarText-sc-1vuf9om-0 lbHnkX"
            fontSize="1em"
            fontWeight={400}
            letterSpacing="0px"
          >
            AB
          </h6>
        </div>
      </div>
      <div
        className="Bar__Slot-icfo76-1 yvaBx"
      >
        <p
          className="Typography__Paragraph-sc-19auepv-3 bGQNqt"
          fontSize="1em"
          fontWeight={600}
          id={null}
          letterSpacing="0px"
        >
          List Item
        </p>
        <p
          className="Typography__Paragraph-sc-19auepv-3 CcLky"
          fontSize="0.75em"
          fontWeight={400}
          id={null}
          letterSpacing="0.2px"
        >
          This is the description
        </p>
      </div>
    </div>
  </li>
  <li
    className="List__ListItemWrapper-sc-43f2zq-0 ktfOaA"
    disabled={false}
    href={null}
    id={null}
    onClick={null}
    tabIndex="0"
  >
    <div
      className="Bar__BarLayout-icfo76-2 eUVQsH"
      id={null}
      onClick={null}
    >
      <div
        className="Bar__Slot-icfo76-1 boCGaE"
      >
        <div
          className="Avatar__TagContainer-sc-1vuf9om-2 bIbEMn"
          id={null}
          onClick={null}
        >
          <h6
            className="Typography__TitleText-sc-19auepv-2 exoZGd Avatar__AvatarText-sc-1vuf9om-0 lbHnkX"
            fontSize="1em"
            fontWeight={400}
            letterSpacing="0px"
          >
            CD
          </h6>
        </div>
      </div>
      <div
        className="Bar__Slot-icfo76-1 yvaBx"
      >
        <p
          className="Typography__Paragraph-sc-19auepv-3 bGQNqt"
          fontSize="1em"
          fontWeight={600}
          id={null}
          letterSpacing="0px"
        >
          List Item
        </p>
        <p
          className="Typography__Paragraph-sc-19auepv-3 CcLky"
          fontSize="0.75em"
          fontWeight={400}
          id={null}
          letterSpacing="0.2px"
        >
          This is the description
        </p>
      </div>
    </div>
  </li>
  <li
    className="List__ListItemWrapper-sc-43f2zq-0 ktfOaA"
    disabled={false}
    href={null}
    id={null}
    onClick={null}
    tabIndex="0"
  >
    <div
      className="Bar__BarLayout-icfo76-2 eUVQsH"
      id={null}
      onClick={null}
    >
      <div
        className="Bar__Slot-icfo76-1 boCGaE"
      >
        <div
          className="Avatar__TagContainer-sc-1vuf9om-2 bIbEMn"
          id={null}
          onClick={null}
        >
          <h6
            className="Typography__TitleText-sc-19auepv-2 exoZGd Avatar__AvatarText-sc-1vuf9om-0 lbHnkX"
            fontSize="1em"
            fontWeight={400}
            letterSpacing="0px"
          >
            EF
          </h6>
        </div>
      </div>
      <div
        className="Bar__Slot-icfo76-1 yvaBx"
      >
        <p
          className="Typography__Paragraph-sc-19auepv-3 bGQNqt"
          fontSize="1em"
          fontWeight={600}
          id={null}
          letterSpacing="0px"
        >
          List Item
        </p>
        <p
          className="Typography__Paragraph-sc-19auepv-3 CcLky"
          fontSize="0.75em"
          fontWeight={400}
          id={null}
          letterSpacing="0.2px"
        >
          This is the description
        </p>
      </div>
    </div>
  </li>
  <li
    className="List__ListItemWrapper-sc-43f2zq-0 ktfOaA"
    disabled={false}
    href={null}
    id={null}
    onClick={null}
    tabIndex="0"
  >
    <div
      className="Bar__BarLayout-icfo76-2 eUVQsH"
      id={null}
      onClick={null}
    >
      <div
        className="Bar__Slot-icfo76-1 boCGaE"
      >
        <div
          className="Avatar__TagContainer-sc-1vuf9om-2 bIbEMn"
          id={null}
          onClick={null}
        >
          <h6
            className="Typography__TitleText-sc-19auepv-2 exoZGd Avatar__AvatarText-sc-1vuf9om-0 lbHnkX"
            fontSize="1em"
            fontWeight={400}
            letterSpacing="0px"
          >
            GH
          </h6>
        </div>
      </div>
      <div
        className="Bar__Slot-icfo76-1 yvaBx"
      >
        <p
          className="Typography__Paragraph-sc-19auepv-3 bGQNqt"
          fontSize="1em"
          fontWeight={600}
          id={null}
          letterSpacing="0px"
        >
          List Item
        </p>
        <p
          className="Typography__Paragraph-sc-19auepv-3 CcLky"
          fontSize="0.75em"
          fontWeight={400}
          id={null}
          letterSpacing="0.2px"
        >
          This is the description
        </p>
      </div>
    </div>
  </li>
</ul>
`;

exports[` 7`] = `
<ul
  className="List__ListWrapper-sc-43f2zq-1 dtSHCa"
  id="Post-Toggle"
>
  <li
    className="List__ListItemWrapper-sc-43f2zq-0 ktfOaA"
    disabled={false}
    href={null}
    id={null}
    onClick={null}
    tabIndex="0"
  >
    <div
      className="Bar__BarLayout-icfo76-2 eUVQsH"
      id={null}
      onClick={null}
    >
      <div
        className="Bar__Slot-icfo76-1 fIRUJx"
      >
        <p
          className="Typography__Paragraph-sc-19auepv-3 bGQNqt"
          fontSize="1em"
          fontWeight={600}
          id={null}
          letterSpacing="0px"
        >
          List Item
        </p>
        <p
          className="Typography__Paragraph-sc-19auepv-3 CcLky"
          fontSize="0.75em"
          fontWeight={400}
          id={null}
          letterSpacing="0.2px"
        >
          This is the description
        </p>
      </div>
      <div
        className="Bar__Slot-icfo76-1 cxljst"
      >
        <div
          className="Switch__SwitchContainer-sc-1bvlvzt-0 kJWxTM"
          disabled={false}
          id={null}
          label="Toggle 1"
          onClick={[Function]}
        >
          <div
            checked={false}
            className="Switch__StyledSwitch-sc-1bvlvzt-1 gEzAJR"
            disabled={false}
            onChange={null}
          >
            <div
              checked={false}
              className="Switch__Circle-sc-1bvlvzt-2 gXgoDz"
              disabled={false}
            />
          </div>
          <label
            className="Typography__StyledLabel-sc-19auepv-0 RzJFI"
            fontSize="0.82em"
            fontWeight={400}
            htmlFor={null}
            letterSpacing="0px"
          >
            Toggle 1
          </label>
        </div>
      </div>
    </div>
  </li>
  <li
    className="List__ListItemWrapper-sc-43f2zq-0 ktfOaA"
    disabled={false}
    href={null}
    id={null}
    onClick={null}
    tabIndex="0"
  >
    <div
      className="Bar__BarLayout-icfo76-2 eUVQsH"
      id={null}
      onClick={null}
    >
      <div
        className="Bar__Slot-icfo76-1 fIRUJx"
      >
        <p
          className="Typography__Paragraph-sc-19auepv-3 bGQNqt"
          fontSize="1em"
          fontWeight={600}
          id={null}
          letterSpacing="0px"
        >
          List Item
        </p>
        <p
          className="Typography__Paragraph-sc-19auepv-3 CcLky"
          fontSize="0.75em"
          fontWeight={400}
          id={null}
          letterSpacing="0.2px"
        >
          This is the description
        </p>
      </div>
      <div
        className="Bar__Slot-icfo76-1 cxljst"
      >
        <div
          className="Switch__SwitchContainer-sc-1bvlvzt-0 kJWxTM"
          disabled={false}
          id={null}
          label="Toggle 2"
          onClick={[Function]}
        >
          <div
            checked={false}
            className="Switch__StyledSwitch-sc-1bvlvzt-1 gEzAJR"
            disabled={false}
            onChange={null}
          >
            <div
              checked={false}
              className="Switch__Circle-sc-1bvlvzt-2 gXgoDz"
              disabled={false}
            />
          </div>
          <label
            className="Typography__StyledLabel-sc-19auepv-0 RzJFI"
            fontSize="0.82em"
            fontWeight={400}
            htmlFor={null}
            letterSpacing="0px"
          >
            Toggle 2
          </label>
        </div>
      </div>
    </div>
  </li>
  <li
    className="List__ListItemWrapper-sc-43f2zq-0 ktfOaA"
    disabled={false}
    href={null}
    id={null}
    onClick={null}
    tabIndex="0"
  >
    <div
      className="Bar__BarLayout-icfo76-2 eUVQsH"
      id={null}
      onClick={null}
    >
      <div
        className="Bar__Slot-icfo76-1 fIRUJx"
      >
        <p
          className="Typography__Paragraph-sc-19auepv-3 bGQNqt"
          fontSize="1em"
          fontWeight={600}
          id={null}
          letterSpacing="0px"
        >
          List Item
        </p>
        <p
          className="Typography__Paragraph-sc-19auepv-3 CcLky"
          fontSize="0.75em"
          fontWeight={400}
          id={null}
          letterSpacing="0.2px"
        >
          This is the description
        </p>
      </div>
      <div
        className="Bar__Slot-icfo76-1 cxljst"
      >
        <div
          className="Switch__SwitchContainer-sc-1bvlvzt-0 hGOHyg"
          disabled={false}
          id={null}
          label={null}
          onClick={[Function]}
        >
          <div
            checked={false}
            className="Switch__StyledSwitch-sc-1bvlvzt-1 gEzAJR"
            disabled={false}
            onChange={null}
          >
            <div
              checked={false}
              className="Switch__Circle-sc-1bvlvzt-2 gXgoDz"
              disabled={false}
            />
          </div>
        </div>
      </div>
    </div>
  </li>
  <li
    className="List__ListItemWrapper-sc-43f2zq-0 ktfOaA"
    disabled={false}
    href={null}
    id={null}
    onClick={null}
    tabIndex="0"
  >
    <div
      className="Bar__BarLayout-icfo76-2 eUVQsH"
      id={null}
      onClick={null}
    >
      <div
        className="Bar__Slot-icfo76-1 fIRUJx"
      >
        <p
          className="Typography__Paragraph-sc-19auepv-3 bGQNqt"
          fontSize="1em"
          fontWeight={600}
          id={null}
          letterSpacing="0px"
        >
          List Item
        </p>
        <p
          className="Typography__Paragraph-sc-19auepv-3 CcLky"
          fontSize="0.75em"
          fontWeight={400}
          id={null}
          letterSpacing="0.2px"
        >
          This is the description
        </p>
      </div>
      <div
        className="Bar__Slot-icfo76-1 cxljst"
      >
        <div
          className="Switch__SwitchContainer-sc-1bvlvzt-0 kJWxTM"
          disabled={false}
          id={null}
          label="Toggle 4"
          onClick={[Function]}
        >
          <div
            checked={false}
            className="Switch__StyledSwitch-sc-1bvlvzt-1 gEzAJR"
            disabled={false}
            onChange={null}
          >
            <div
              checked={false}
              className="Switch__Circle-sc-1bvlvzt-2 gXgoDz"
              disabled={false}
            />
          </div>
          <label
            className="Typography__StyledLabel-sc-19auepv-0 RzJFI"
            fontSize="0.82em"
            fontWeight={400}
            htmlFor={null}
            letterSpacing="0px"
          >
            Toggle 4
          </label>
        </div>
      </div>
    </div>
  </li>
</ul>
`;

exports[` 8`] = `
<ul
  className="List__ListWrapper-sc-43f2zq-1 dtSHCa"
  id="Post-Label"
>
  <li
    className="List__ListItemWrapper-sc-43f2zq-0 ktfOaA"
    disabled={false}
    href={null}
    id={null}
    onClick={null}
    tabIndex="0"
  >
    <div
      className="Bar__BarLayout-icfo76-2 eUVQsH"
      id={null}
      onClick={null}
    >
      <div
        className="Bar__Slot-icfo76-1 fIRUJx"
      >
        <p
          className="Typography__Paragraph-sc-19auepv-3 bGQNqt"
          fontSize="1em"
          fontWeight={600}
          id={null}
          letterSpacing="0px"
        >
          List Item
        </p>
        <p
          className="Typography__Paragraph-sc-19auepv-3 CcLky"
          fontSize="0.75em"
          fontWeight={400}
          id={null}
          letterSpacing="0.2px"
        >
          This is the description
        </p>
      </div>
      <div
        className="Bar__Slot-icfo76-1 cxljst"
      >
        <div
          className="Tag__TagContainer-sc-128kb3h-0 iQZTDE"
          id={null}
          label="Label"
        >
          <label
            className="Typography__StyledLabel-sc-19auepv-0 gZBTly"
            fontSize="0.65em"
            fontWeight={600}
            htmlFor={null}
            letterSpacing="0.6px"
          >
            Label
          </label>
        </div>
      </div>
    </div>
  </li>
  <li
    className="List__ListItemWrapper-sc-43f2zq-0 ktfOaA"
    disabled={false}
    href={null}
    id={null}
    onClick={null}
    tabIndex="0"
  >
    <div
      className="Bar__BarLayout-icfo76-2 eUVQsH"
      id={null}
      onClick={null}
    >
      <div
        className="Bar__Slot-icfo76-1 fIRUJx"
      >
        <p
          className="Typography__Paragraph-sc-19auepv-3 bGQNqt"
          fontSize="1em"
          fontWeight={600}
          id={null}
          letterSpacing="0px"
        >
          List Item
        </p>
        <p
          className="Typography__Paragraph-sc-19auepv-3 CcLky"
          fontSize="0.75em"
          fontWeight={400}
          id={null}
          letterSpacing="0.2px"
        >
          This is the description
        </p>
      </div>
      <div
        className="Bar__Slot-icfo76-1 cxljst"
      >
        <div
          className="Tag__TagContainer-sc-128kb3h-0 iQZTDE"
          id={null}
          label="6"
        >
          <label
            className="Typography__StyledLabel-sc-19auepv-0 gZBTly"
            fontSize="0.65em"
            fontWeight={600}
            htmlFor={null}
            letterSpacing="0.6px"
          >
            6
          </label>
        </div>
      </div>
    </div>
  </li>
  <li
    className="List__ListItemWrapper-sc-43f2zq-0 ktfOaA"
    disabled={false}
    href={null}
    id={null}
    onClick={null}
    tabIndex="0"
  >
    <div
      className="Bar__BarLayout-icfo76-2 eUVQsH"
      id={null}
      onClick={null}
    >
      <div
        className="Bar__Slot-icfo76-1 fIRUJx"
      >
        <p
          className="Typography__Paragraph-sc-19auepv-3 bGQNqt"
          fontSize="1em"
          fontWeight={600}
          id={null}
          letterSpacing="0px"
        >
          List Item
        </p>
        <p
          className="Typography__Paragraph-sc-19auepv-3 CcLky"
          fontSize="0.75em"
          fontWeight={400}
          id={null}
          letterSpacing="0.2px"
        >
          This is the description
        </p>
      </div>
      <div
        className="Bar__Slot-icfo76-1 cxljst"
      >
        <div
          className="Tag__TagContainer-sc-128kb3h-0 iQZTDE"
          id={null}
          label="NEW!"
        >
          <label
            className="Typography__StyledLabel-sc-19auepv-0 gZBTly"
            fontSize="0.65em"
            fontWeight={600}
            htmlFor={null}
            letterSpacing="0.6px"
          >
            NEW!
          </label>
        </div>
      </div>
    </div>
  </li>
  <li
    className="List__ListItemWrapper-sc-43f2zq-0 ktfOaA"
    disabled={false}
    href={null}
    id={null}
    onClick={null}
    tabIndex="0"
  >
    <div
      className="Bar__BarLayout-icfo76-2 eUVQsH"
      id={null}
      onClick={null}
    >
      <div
        className="Bar__Slot-icfo76-1 fIRUJx"
      >
        <p
          className="Typography__Paragraph-sc-19auepv-3 bGQNqt"
          fontSize="1em"
          fontWeight={600}
          id={null}
          letterSpacing="0px"
        >
          List Item
        </p>
        <p
          className="Typography__Paragraph-sc-19auepv-3 CcLky"
          fontSize="0.75em"
          fontWeight={400}
          id={null}
          letterSpacing="0.2px"
        >
          This is the description
        </p>
      </div>
      <div
        className="Bar__Slot-icfo76-1 cxljst"
      >
        <div
          className="Tag__TagContainer-sc-128kb3h-0 iQZTDE"
          id={null}
          label="9"
        >
          <label
            className="Typography__StyledLabel-sc-19auepv-0 gZBTly"
            fontSize="0.65em"
            fontWeight={600}
            htmlFor={null}
            letterSpacing="0.6px"
          >
            9
          </label>
        </div>
      </div>
    </div>
  </li>
</ul>
`;

exports[` 9`] = `
<ul
  className="List__ListWrapper-sc-43f2zq-1 dtSHCa"
  id="Post-Checkbox"
>
  <li
    className="List__ListItemWrapper-sc-43f2zq-0 ktfOaA"
    disabled={false}
    href={null}
    id={null}
    onClick={null}
    tabIndex="0"
  >
    <div
      className="Bar__BarLayout-icfo76-2 eUVQsH"
      id={null}
      onClick={null}
    >
      <div
        className="Bar__Slot-icfo76-1 fIRUJx"
      >
        <p
          className="Typography__Paragraph-sc-19auepv-3 bGQNqt"
          fontSize="1em"
          fontWeight={600}
          id={null}
          letterSpacing="0px"
        >
          List Item
        </p>
        <p
          className="Typography__Paragraph-sc-19auepv-3 CcLky"
          fontSize="0.75em"
          fontWeight={400}
          id={null}
          letterSpacing="0.2px"
        >
          This is the description
        </p>
      </div>
      <div
        className="Bar__Slot-icfo76-1 cxljst"
      >
        <div
          className="Checkbox__CheckboxContainer-sc-1gwp7am-1 hTLhND"
          disabled={false}
        >
          <input
            checked={null}
            className="Checkbox__CheckboxInput-sc-1gwp7am-2 gnGvnd"
            id="Box 1"
            onBlur={null}
            onChange={null}
            onFocus={null}
            type="checkbox"
          />
          <label
            className="Typography__StyledLabel-sc-19auepv-0 gxLOic"
            fontSize="0.876em"
            fontWeight={400}
            htmlFor="Box 1"
            letterSpacing="0.2px"
          >
            Box 1
          </label>
        </div>
      </div>
    </div>
  </li>
  <li
    className="List__ListItemWrapper-sc-43f2zq-0 ktfOaA"
    disabled={false}
    href={null}
    id={null}
    onClick={null}
    tabIndex="0"
  >
    <div
      className="Bar__BarLayout-icfo76-2 eUVQsH"
      id={null}
      onClick={null}
    >
      <div
        className="Bar__Slot-icfo76-1 fIRUJx"
      >
        <p
          className="Typography__Paragraph-sc-19auepv-3 bGQNqt"
          fontSize="1em"
          fontWeight={600}
          id={null}
          letterSpacing="0px"
        >
          List Item
        </p>
        <p
          className="Typography__Paragraph-sc-19auepv-3 CcLky"
          fontSize="0.75em"
          fontWeight={400}
          id={null}
          letterSpacing="0.2px"
        >
          This is the description
        </p>
      </div>
      <div
        className="Bar__Slot-icfo76-1 cxljst"
      >
        <div
          className="Checkbox__CheckboxContainer-sc-1gwp7am-1 hTLhND"
          disabled={false}
        >
          <input
            checked={null}
            className="Checkbox__CheckboxInput-sc-1gwp7am-2 gnGvnd"
            id="Box 2"
            onBlur={null}
            onChange={null}
            onFocus={null}
            type="checkbox"
          />
          <label
            className="Typography__StyledLabel-sc-19auepv-0 gxLOic"
            fontSize="0.876em"
            fontWeight={400}
            htmlFor="Box 2"
            letterSpacing="0.2px"
          >
            Box 2
          </label>
        </div>
      </div>
    </div>
  </li>
  <li
    className="List__ListItemWrapper-sc-43f2zq-0 ktfOaA"
    disabled={false}
    href={null}
    id={null}
    onClick={null}
    tabIndex="0"
  >
    <div
      className="Bar__BarLayout-icfo76-2 eUVQsH"
      id={null}
      onClick={null}
    >
      <div
        className="Bar__Slot-icfo76-1 fIRUJx"
      >
        <p
          className="Typography__Paragraph-sc-19auepv-3 bGQNqt"
          fontSize="1em"
          fontWeight={600}
          id={null}
          letterSpacing="0px"
        >
          List Item
        </p>
        <p
          className="Typography__Paragraph-sc-19auepv-3 CcLky"
          fontSize="0.75em"
          fontWeight={400}
          id={null}
          letterSpacing="0.2px"
        >
          This is the description
        </p>
      </div>
      <div
        className="Bar__Slot-icfo76-1 cxljst"
      >
        <div
          className="Checkbox__CheckboxContainer-sc-1gwp7am-1 hTLhND"
          disabled={false}
        >
          <input
            checked={null}
            className="Checkbox__CheckboxInput-sc-1gwp7am-2 gnGvnd"
            id="Box 3"
            onBlur={null}
            onChange={null}
            onFocus={null}
            type="checkbox"
          />
          <label
            className="Typography__StyledLabel-sc-19auepv-0 gxLOic"
            fontSize="0.876em"
            fontWeight={400}
            htmlFor="Box 3"
            letterSpacing="0.2px"
          >
            Box 3
          </label>
        </div>
      </div>
    </div>
  </li>
  <li
    className="List__ListItemWrapper-sc-43f2zq-0 ktfOaA"
    disabled={false}
    href={null}
    id={null}
    onClick={null}
    tabIndex="0"
  >
    <div
      className="Bar__BarLayout-icfo76-2 eUVQsH"
      id={null}
      onClick={null}
    >
      <div
        className="Bar__Slot-icfo76-1 fIRUJx"
      >
        <p
          className="Typography__Paragraph-sc-19auepv-3 bGQNqt"
          fontSize="1em"
          fontWeight={600}
          id={null}
          letterSpacing="0px"
        >
          List Item
        </p>
        <p
          className="Typography__Paragraph-sc-19auepv-3 CcLky"
          fontSize="0.75em"
          fontWeight={400}
          id={null}
          letterSpacing="0.2px"
        >
          This is the description
        </p>
      </div>
      <div
        className="Bar__Slot-icfo76-1 cxljst"
      >
        <div
          className="Checkbox__CheckboxContainer-sc-1gwp7am-1 hTLhND"
          disabled={false}
        >
          <input
            checked={null}
            className="Checkbox__CheckboxInput-sc-1gwp7am-2 gnGvnd"
            id="Box 4"
            onBlur={null}
            onChange={null}
            onFocus={null}
            type="checkbox"
          />
          <label
            className="Typography__StyledLabel-sc-19auepv-0 gxLOic"
            fontSize="0.876em"
            fontWeight={400}
            htmlFor="Box 4"
            letterSpacing="0.2px"
          >
            Box 4
          </label>
        </div>
      </div>
    </div>
  </li>
</ul>
`;

exports[` 10`] = `
<ul
  className="List__ListWrapper-sc-43f2zq-1 dtSHCa"
  id="Post-Icon"
>
  <li
    className="List__ListItemWrapper-sc-43f2zq-0 ktfOaA"
    disabled={false}
    href={null}
    id={null}
    onClick={null}
    tabIndex="0"
  >
    <div
      className="Bar__BarLayout-icfo76-2 eUVQsH"
      id={null}
      onClick={null}
    >
      <div
        className="Bar__Slot-icfo76-1 fIRUJx"
      >
        <p
          className="Typography__Paragraph-sc-19auepv-3 bGQNqt"
          fontSize="1em"
          fontWeight={600}
          id={null}
          letterSpacing="0px"
        >
          List Item
        </p>
        <p
          className="Typography__Paragraph-sc-19auepv-3 CcLky"
          fontSize="0.75em"
          fontWeight={400}
          id={null}
          letterSpacing="0.2px"
        >
          This is the description
        </p>
      </div>
      <div
        className="Bar__Slot-icfo76-1 cxljst"
      >
        <svg
          aria-hidden="true"
          className="svg-inline--fa fa-angle-right fa-w-6 fa-fw Icon__StyledIcon-sc-1oa9m1v-1 gwuEuD"
          color={null}
          data-icon="angle-right"
          data-prefix="far"
          focusable="false"
          fontSize="inherit"
          id={null}
          role="img"
          style={Object {}}
          viewBox="0 0 192 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M187.8 264.5L41 412.5c-4.7 4.7-12.3 4.7-17 0L4.2 392.7c-4.7-4.7-4.7-12.3 0-17L122.7 256 4.2 136.3c-4.7-4.7-4.7-12.3 0-17L24 99.5c4.7-4.7 12.3-4.7 17 0l146.8 148c4.7 4.7 4.7 12.3 0 17z"
            fill="currentColor"
            style={Object {}}
          />
        </svg>
      </div>
    </div>
  </li>
  <li
    className="List__ListItemWrapper-sc-43f2zq-0 ktfOaA"
    disabled={false}
    href={null}
    id={null}
    onClick={null}
    tabIndex="0"
  >
    <div
      className="Bar__BarLayout-icfo76-2 eUVQsH"
      id={null}
      onClick={null}
    >
      <div
        className="Bar__Slot-icfo76-1 fIRUJx"
      >
        <p
          className="Typography__Paragraph-sc-19auepv-3 bGQNqt"
          fontSize="1em"
          fontWeight={600}
          id={null}
          letterSpacing="0px"
        >
          List Item
        </p>
        <p
          className="Typography__Paragraph-sc-19auepv-3 CcLky"
          fontSize="0.75em"
          fontWeight={400}
          id={null}
          letterSpacing="0.2px"
        >
          This is the description
        </p>
      </div>
      <div
        className="Bar__Slot-icfo76-1 cxljst"
      >
        <svg
          aria-hidden="true"
          className="svg-inline--fa fa-info fa-w-6 fa-fw Icon__StyledIcon-sc-1oa9m1v-1 gwuEuD"
          color={null}
          data-icon="info"
          data-prefix="fas"
          focusable="false"
          fontSize="inherit"
          id={null}
          role="img"
          style={Object {}}
          viewBox="0 0 192 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M20 424.229h20V279.771H20c-11.046 0-20-8.954-20-20V212c0-11.046 8.954-20 20-20h112c11.046 0 20 8.954 20 20v212.229h20c11.046 0 20 8.954 20 20V492c0 11.046-8.954 20-20 20H20c-11.046 0-20-8.954-20-20v-47.771c0-11.046 8.954-20 20-20zM96 0C56.235 0 24 32.235 24 72s32.235 72 72 72 72-32.235 72-72S135.764 0 96 0z"
            fill="currentColor"
            style={Object {}}
          />
        </svg>
      </div>
    </div>
  </li>
  <li
    className="List__ListItemWrapper-sc-43f2zq-0 ktfOaA"
    disabled={false}
    href={null}
    id={null}
    onClick={null}
    tabIndex="0"
  >
    <div
      className="Bar__BarLayout-icfo76-2 eUVQsH"
      id={null}
      onClick={null}
    >
      <div
        className="Bar__Slot-icfo76-1 fIRUJx"
      >
        <p
          className="Typography__Paragraph-sc-19auepv-3 bGQNqt"
          fontSize="1em"
          fontWeight={600}
          id={null}
          letterSpacing="0px"
        >
          List Item
        </p>
        <p
          className="Typography__Paragraph-sc-19auepv-3 CcLky"
          fontSize="0.75em"
          fontWeight={400}
          id={null}
          letterSpacing="0.2px"
        >
          This is the description
        </p>
      </div>
      <div
        className="Bar__Slot-icfo76-1 cxljst"
      >
        <a
          className="Bar__LinkedWrapper-icfo76-0 dWrXLj"
          onClick={true}
        >
          <a
            className="Icon__LinkedIcon-sc-1oa9m1v-0 fgVuzC"
            disabled={null}
            href={null}
            onClick={true}
          >
            <svg
              aria-hidden="true"
              className="svg-inline--fa fa-home-alt fa-w-18 fa-fw Icon__StyledIcon-sc-1oa9m1v-1 kxrdnu"
              color="link"
              data-icon="home-alt"
              data-prefix="fas"
              focusable="false"
              fontSize="inherit"
              id={null}
              role="img"
              style={Object {}}
              viewBox="0 0 576 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M280.37 148.26L96 300.11V464a16 16 0 0 0 16 16l112.06-.29a16 16 0 0 0 15.92-16V368a16 16 0 0 1 16-16h64a16 16 0 0 1 16 16v95.64a16 16 0 0 0 16 16.05L464 480a16 16 0 0 0 16-16V300L295.67 148.26a12.19 12.19 0 0 0-15.3 0zM571.6 251.47L318.47 43a48 48 0 0 0-61 0L4.34 251.47a12 12 0 0 0-1.6 16.9l25.5 31A12 12 0 0 0 45.15 301l235.22-193.74a12.19 12.19 0 0 1 15.3 0L530.9 301a12 12 0 0 0 16.9-1.6l25.5-31a12 12 0 0 0-1.7-16.93z"
                fill="currentColor"
                style={Object {}}
              />
            </svg>
          </a>
        </a>
      </div>
    </div>
  </li>
  <li
    className="List__ListItemWrapper-sc-43f2zq-0 ktfOaA"
    disabled={false}
    href={null}
    id={null}
    onClick={null}
    tabIndex="0"
  >
    <div
      className="Bar__BarLayout-icfo76-2 eUVQsH"
      id={null}
      onClick={null}
    >
      <div
        className="Bar__Slot-icfo76-1 fIRUJx"
      >
        <p
          className="Typography__Paragraph-sc-19auepv-3 bGQNqt"
          fontSize="1em"
          fontWeight={600}
          id={null}
          letterSpacing="0px"
        >
          List Item
        </p>
        <p
          className="Typography__Paragraph-sc-19auepv-3 CcLky"
          fontSize="0.75em"
          fontWeight={400}
          id={null}
          letterSpacing="0.2px"
        >
          This is the description
        </p>
      </div>
      <div
        className="Bar__Slot-icfo76-1 cxljst"
      >
        <a
          className="Bar__LinkedWrapper-icfo76-0 dWrXLj"
          onClick={true}
        >
          <a
            className="Icon__LinkedIcon-sc-1oa9m1v-0 fgVuzC"
            disabled={null}
            href={null}
            onClick={true}
          >
            <svg
              aria-hidden="true"
              className="svg-inline--fa fa-bookmark fa-w-12 fa-fw Icon__StyledIcon-sc-1oa9m1v-1 kxrdnu"
              color="link"
              data-icon="bookmark"
              data-prefix="far"
              focusable="false"
              fontSize="inherit"
              id={null}
              role="img"
              style={Object {}}
              viewBox="0 0 384 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M336 0H48C21.49 0 0 21.49 0 48v464l192-112 192 112V48c0-26.51-21.49-48-48-48zm0 428.43l-144-84-144 84V54a6 6 0 0 1 6-6h276c3.314 0 6 2.683 6 5.996V428.43z"
                fill="currentColor"
                style={Object {}}
              />
            </svg>
          </a>
        </a>
      </div>
    </div>
  </li>
  <li
    className="List__ListItemWrapper-sc-43f2zq-0 ktfOaA"
    disabled={false}
    href={null}
    id={null}
    onClick={null}
    tabIndex="0"
  >
    <div
      className="Bar__BarLayout-icfo76-2 eUVQsH"
      id={null}
      onClick={null}
    >
      <div
        className="Bar__Slot-icfo76-1 fIRUJx"
      >
        <p
          className="Typography__Paragraph-sc-19auepv-3 bGQNqt"
          fontSize="1em"
          fontWeight={600}
          id={null}
          letterSpacing="0px"
        >
          List Item
        </p>
        <p
          className="Typography__Paragraph-sc-19auepv-3 CcLky"
          fontSize="0.75em"
          fontWeight={400}
          id={null}
          letterSpacing="0.2px"
        >
          This is the description
        </p>
      </div>
      <div
        className="Bar__Slot-icfo76-1 cxljst"
      >
        <svg
          aria-hidden="true"
          className="svg-inline--fa fa-check-circle fa-w-16 fa-fw Icon__StyledIcon-sc-1oa9m1v-1 jEGLhc"
          color="success80"
          data-icon="check-circle"
          data-prefix="far"
          focusable="false"
          fontSize="inherit"
          id={null}
          role="img"
          style={Object {}}
          viewBox="0 0 512 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M256 8C119.033 8 8 119.033 8 256s111.033 248 248 248 248-111.033 248-248S392.967 8 256 8zm0 48c110.532 0 200 89.451 200 200 0 110.532-89.451 200-200 200-110.532 0-200-89.451-200-200 0-110.532 89.451-200 200-200m140.204 130.267l-22.536-22.718c-4.667-4.705-12.265-4.736-16.97-.068L215.346 303.697l-59.792-60.277c-4.667-4.705-12.265-4.736-16.97-.069l-22.719 22.536c-4.705 4.667-4.736 12.265-.068 16.971l90.781 91.516c4.667 4.705 12.265 4.736 16.97.068l172.589-171.204c4.704-4.668 4.734-12.266.067-16.971z"
            fill="currentColor"
            style={Object {}}
          />
        </svg>
      </div>
    </div>
  </li>
</ul>
`;

exports[` 11`] = `
<ul
  className="List__ListWrapper-sc-43f2zq-1 dtSHCa"
  id="List with onClick"
>
  <li
    className="List__ListItemWrapper-sc-43f2zq-0 ktfOaA"
    disabled={false}
    href={null}
    id={null}
    onClick={true}
    tabIndex="0"
  >
    <div
      className="Bar__BarLayout-icfo76-2 eUVQsH"
      id={null}
      onClick={null}
    >
      <div
        className="Bar__Slot-icfo76-1 RjiBe"
      >
        <a
          className="Bar__LinkedWrapper-icfo76-0 dWrXLj"
          onClick={true}
        >
          <p
            className="Typography__Paragraph-sc-19auepv-3 bGQNqt"
            fontSize="1em"
            fontWeight={600}
            id={null}
            letterSpacing="0px"
          >
            List Item
          </p>
          <p
            className="Typography__Paragraph-sc-19auepv-3 CcLky"
            fontSize="0.75em"
            fontWeight={400}
            id={null}
            letterSpacing="0.2px"
          >
            This is the description
          </p>
        </a>
      </div>
    </div>
  </li>
  <li
    className="List__ListItemWrapper-sc-43f2zq-0 ktfOaA"
    disabled={false}
    href={null}
    id={null}
    onClick={true}
    tabIndex="0"
  >
    <div
      className="Bar__BarLayout-icfo76-2 eUVQsH"
      id={null}
      onClick={null}
    >
      <div
        className="Bar__Slot-icfo76-1 RjiBe"
      >
        <a
          className="Bar__LinkedWrapper-icfo76-0 dWrXLj"
          onClick={true}
        >
          <p
            className="Typography__Paragraph-sc-19auepv-3 bGQNqt"
            fontSize="1em"
            fontWeight={600}
            id={null}
            letterSpacing="0px"
          >
            List Item
          </p>
          <p
            className="Typography__Paragraph-sc-19auepv-3 CcLky"
            fontSize="0.75em"
            fontWeight={400}
            id={null}
            letterSpacing="0.2px"
          >
            This is the description
          </p>
        </a>
      </div>
    </div>
  </li>
  <li
    className="List__ListItemWrapper-sc-43f2zq-0 ktfOaA"
    disabled={false}
    href={null}
    id={null}
    onClick={true}
    tabIndex="0"
  >
    <div
      className="Bar__BarLayout-icfo76-2 eUVQsH"
      id={null}
      onClick={null}
    >
      <div
        className="Bar__Slot-icfo76-1 RjiBe"
      >
        <a
          className="Bar__LinkedWrapper-icfo76-0 dWrXLj"
          onClick={true}
        >
          <p
            className="Typography__Paragraph-sc-19auepv-3 bGQNqt"
            fontSize="1em"
            fontWeight={600}
            id={null}
            letterSpacing="0px"
          >
            List Item
          </p>
          <p
            className="Typography__Paragraph-sc-19auepv-3 CcLky"
            fontSize="0.75em"
            fontWeight={400}
            id={null}
            letterSpacing="0.2px"
          >
            This is the description
          </p>
        </a>
      </div>
    </div>
  </li>
  <li
    className="List__ListItemWrapper-sc-43f2zq-0 ktfOaA"
    disabled={false}
    href={null}
    id={null}
    onClick={true}
    tabIndex="0"
  >
    <div
      className="Bar__BarLayout-icfo76-2 eUVQsH"
      id={null}
      onClick={null}
    >
      <div
        className="Bar__Slot-icfo76-1 RjiBe"
      >
        <a
          className="Bar__LinkedWrapper-icfo76-0 dWrXLj"
          onClick={true}
        >
          <p
            className="Typography__Paragraph-sc-19auepv-3 bGQNqt"
            fontSize="1em"
            fontWeight={600}
            id={null}
            letterSpacing="0px"
          >
            List Item
          </p>
          <p
            className="Typography__Paragraph-sc-19auepv-3 CcLky"
            fontSize="0.75em"
            fontWeight={400}
            id={null}
            letterSpacing="0.2px"
          >
            This is the description
          </p>
        </a>
      </div>
    </div>
  </li>
</ul>
`;
